Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2
-
Fix Version/s: 10.2.6
-
Component/s: Storage Engine - InnoDB
-
Labels:
Description
Following assertion triggers with any non-zero values for innodb-thread-concurrency in current tree (10.2.5 doesn't look affected)
#6 0x00005629d95130d4 in ut_dbg_assertion_failed (expr=expr@entry=0x5629d9d45ef8 "!trx->declared_to_be_inside_innodb", file=file@entry=0x5629d9d45ea0 "/home/a/test1/mariadb-environs/_depot/m-branch/10.2/storage/innobase/srv/srv0conc.cc", line=line@entry=126) at /home/a/test1/mariadb-environs/_depot/m-branch/10.2/storage/innobase/ut/ut0dbg.cc:60
|
#7 0x00005629d99a2e21 in srv_conc_enter_innodb_with_atomics (trx=<optimized out>) at /home/a/test1/mariadb-environs/_depot/m-branch/10.2/storage/innobase/srv/srv0conc.cc:126
|
#8 0x00005629d98a4a2b in ha_innobase::general_fetch (this=0x7f8c2801a400, buf=0x7f8c28017ec0 "\375\203\006<", direction=1, match_mode=0) at /home/a/test1/mariadb-environs/_depot/m-branch/10.2/storage/innobase/handler/ha_innodb.cc:10365
|
#9 0x00005629d9734bbd in handler::ha_rnd_next (this=0x7f8c2801a400, buf=0x7f8c28017ec0 "\375\203\006<") at /home/a/test1/mariadb-environs/_depot/m-branch/10.2/sql/handler.cc:2584
|
#10 0x00005629d982b035 in rr_sequential (info=0x7f8c280133d0) at /home/a/test1/mariadb-environs/_depot/m-branch/10.2/sql/records.cc:484
|
#11 0x00005629d95e6776 in sub_select (join=0x7f8c28010048, join_tab=0x7f8c28013308, end_of_records=false) at /home/a/test1/mariadb-environs/_depot/m-branch/10.2/sql/sql_select.cc:18484
|
#12 0x00005629d9603771 in do_select (procedure=<optimized out>, join=0x7f8c28010048) at /home/a/test1/mariadb-environs/_depot/m-branch/10.2/sql/sql_select.cc:18009
|
#13 JOIN::exec_inner (this=this@entry=0x7f8c28010048) at /home/a/test1/mariadb-environs/_depot/m-branch/10.2/sql/sql_select.cc:3469
|
#14 0x00005629d9603909 in JOIN::exec (this=this@entry=0x7f8c28010048) at /home/a/test1/mariadb-environs/_depot/m-branch/10.2/sql/sql_select.cc:3271
|
#15 0x00005629d9603a5e in mysql_select (thd=thd@entry=0x7f8c280009a8, tables=0x7f8c2800f748, wild_num=<optimized out>, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2416184064, result=0x7f8c2800ff50, unit=0x7f8c28004348, select_lex=0x7f8c28004a80) at /home/a/test1/mariadb-environs/_depot/m-branch/10.2/sql/sql_select.cc:3664
|
#16 0x00005629d96043c4 in handle_select (thd=thd@entry=0x7f8c280009a8, lex=lex@entry=0x7f8c28004280, result=result@entry=0x7f8c2800ff50, setup_tables_done_option=setup_tables_done_option@entry=0) at /home/a/test1/mariadb-environs/_depot/m-branch/10.2/sql/sql_select.cc:361
|
#17 0x00005629d95bb370 in mysql_execute_command (thd=thd@entry=0x7f8c280009a8) at /home/a/test1/mariadb-environs/_depot/m-branch/10.2/sql/sql_parse.cc:3917
|
#18 0x00005629d95bc2ad in mysql_parse (thd=0x7f8c280009a8, rawbuf=<optimized out>, length=53, parser_state=0x7f8c7cd1f240, is_com_multi=<optimized out>, is_next_command=<optimized out>) at /home/a/test1/mariadb-environs/_depot/m-branch/10.2/sql/sql_parse.cc:7874
|
#19 0x00005629d95befb0 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x7f8c280009a8, packet=packet@entry=0x7f8c28006be9 "CREATE TABLE tmp1 ENGINE=InnoDB SELECT * FROM payment", packet_length=packet_length@entry=53, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /home/a/test1/mariadb-environs/_depot/m-branch/10.2/sql/sql_parse.cc:1812
|
#20 0x00005629d95bf829 in do_command (thd=0x7f8c280009a8) at /home/a/test1/mariadb-environs/_depot/m-branch/10.2/sql/sql_parse.cc:1361
|
#21 0x00005629d9677944 in do_handle_one_connection (connect=connect@entry=0x5629dd3650a8) at /home/a/test1/mariadb-environs/_depot/m-branch/10.2/sql/sql_connect.cc:1354
|
#22 0x00005629d9677ab4 in handle_one_connection (arg=arg@entry=0x5629dd3650a8) at /home/a/test1/mariadb-environs/_depot/m-branch/10.2/sql/sql_connect.cc:1260
|
To repeat:
1. Put attached payment.sql into favorite directory (e.g. home)
2. create following mtr test, e.g. named suite/innodb/t/innodb1.test (adjust path to payment.sql accordingly ):
--source include/have_innodb.inc
--exec $MYSQL < /home/a/payment.sql
--exec $MYSQL -Ns -e "CREATE TABLE tmp1 ENGINE=InnoDB SELECT * FROM payment" test
3. run with non-zero innodb-thread-concurrency, e.g.:
./mysql-test-run.pl innodb1 --mysqld=--innodb_thread_concurrency=8 |