MDEV-12706: !trx->declared_to_be_inside_innodb with innodb_thread_concurrency during CREATE .. SELECT

There were two calls to innobase_srv_conc_enter_innodb on
::general_fetch() due to incorrect merge of 5.7.14.